@startuml

title __SIXTEENTH's Class Diagram__\n

  namespace cn.shui.learning_plan.datastruct_basic.sixteenth {
    class cn.shui.learning_plan.datastruct_basic.sixteenth.L113 {
        ~ map : Map<TreeNode, TreeNode>
        ~ path : Deque<Integer>
        ~ ret : List<List<Integer>>
        - ans : List<List<Integer>>
        + dfs()
        + pathSum1()
        + pathSum2()
        + pathSum3()
        - getPath()
        - helper()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.sixteenth {
    class cn.shui.learning_plan.datastruct_basic.sixteenth.L113.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.sixteenth {
    class cn.shui.learning_plan.datastruct_basic.sixteenth.L199 {
        + rightSideView()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.sixteenth {
    class cn.shui.learning_plan.datastruct_basic.sixteenth.L199.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.sixteenth {
    class cn.shui.learning_plan.datastruct_basic.sixteenth.L450 {
        + deleteNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct_basic.sixteenth {
    class cn.shui.learning_plan.datastruct_basic.sixteenth.L450.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  cn.shui.learning_plan.datastruct_basic.sixteenth.L113 +-down- cn.shui.learning_plan.datastruct_basic.sixteenth.L113.TreeNode
  cn.shui.learning_plan.datastruct_basic.sixteenth.L113.TreeNode o-- cn.shui.learning_plan.datastruct_basic.sixteenth.L113.TreeNode : left
  cn.shui.learning_plan.datastruct_basic.sixteenth.L113.TreeNode o-- cn.shui.learning_plan.datastruct_basic.sixteenth.L113.TreeNode : right
  cn.shui.learning_plan.datastruct_basic.sixteenth.L199 +-down- cn.shui.learning_plan.datastruct_basic.sixteenth.L199.TreeNode
  cn.shui.learning_plan.datastruct_basic.sixteenth.L199.TreeNode o-- cn.shui.learning_plan.datastruct_basic.sixteenth.L199.TreeNode : left
  cn.shui.learning_plan.datastruct_basic.sixteenth.L199.TreeNode o-- cn.shui.learning_plan.datastruct_basic.sixteenth.L199.TreeNode : right
  cn.shui.learning_plan.datastruct_basic.sixteenth.L450 +-down- cn.shui.learning_plan.datastruct_basic.sixteenth.L450.TreeNode
  cn.shui.learning_plan.datastruct_basic.sixteenth.L450.TreeNode o-- cn.shui.learning_plan.datastruct_basic.sixteenth.L450.TreeNode : left
  cn.shui.learning_plan.datastruct_basic.sixteenth.L450.TreeNode o-- cn.shui.learning_plan.datastruct_basic.sixteenth.L450.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
